Migration + URL's + gitignroe update

--- a/.gitignore
+++ b/.gitignore
@@ -136,3 +136,5 @@ GitHub.sublime-settings
 !.vscode/launch.json 
 !.vscode/extensions.json 
 .history
+
+backend/backend/__pycache__/settings.cpython-313.pyc
